@@ -10,7 +10,7 @@ process-instances: (3 * 48 B/proc) = 144 B
 	expr-state: (4 * 4 B/expr) = 16 B
 	rule-state: (4 * 1 B/rule) = 4 B
 expr-process-map: (3 * 48 B/proc) = 144 B
-event-pool: (3 * 48 B/event) = 144 B
+event-pool: (3 * 64 B/event) = 192 B
 event-free-list: (2 * 40 B/free) = 80 B
 event-queue: (0 * 16 B/event) = 0 B
 exclhi-queue: (0 * 48 B/event) = 0 B
