@@ -10,7 +10,7 @@ process-instances: (136401 * 48 B/proc) = 6547248 B
 	expr-state: (310700 * 4 B/expr) = 1242800 B
 	rule-state: (103700 * 1 B/rule) = 103700 B
 expr-process-map: (34601 * 48 B/proc) = 1660848 B
-event-pool: (3 * 48 B/event) = 144 B
+event-pool: (3 * 64 B/event) = 192 B
 event-free-list: (2 * 40 B/free) = 80 B
 event-queue: (0 * 16 B/event) = 0 B
 exclhi-queue: (0 * 48 B/event) = 0 B
