@@ -3,6 +3,14 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2012-08-20	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-86-44c:
+	  hacprsim: pass rule pointer w/ rule_index to avoid lookup_rule(),
+		resulting in 3% speedup.  Event struct increased in size
+		by 1 pointer, affects memory stats in a few tests.
+
+
 2012-08-16	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-86-44b:
